--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -21,7 +21,7 @@ h2 {
     display: flex;
     align-items: stretch;
     border-radius: 10px;
-    border: solid rgb(167, 211, 226);
+    border: solid rgb(255, 122, 14);
     padding-left: 5px;
     transition: all 0.5s ease;
     font-family: "Righteous", cursive;
@@ -35,13 +35,22 @@ h2 {
     text-align: left;
 }
 
+.placeholder {
+    color: lightgray;
+    transition: 0.5s;
+}
+
+.placeholder:focus {
+    color: white;
+}
+
 .formulary:focus {
-    background-color: rgb(167, 211, 226);
+    background-color: rgb(255, 122, 14);
     color: white;
 }
 
 textarea:focus{
-    background-color: rgb(167, 211, 226);
+    background-color: rgb(255, 122, 14);
     color: white;
 }
 
@@ -50,7 +59,7 @@ textarea {
     margin-bottom: 5px;
     font-family: "Righteous", cursive;
     border-radius: 10px;
-    border: solid rgb(167, 211, 226);
+    border: solid rgb(255, 122, 14);
     padding-left: 5px;
     transition: all 0.5s ease;
 }
@@ -58,9 +67,9 @@ textarea {
 button {
     font-family: "Righteous", cursive;
     cursor: pointer;
-    background-color: rgb(167, 211, 226);
+    background-color: rgb(255, 122, 14);
     color: var(--light);
-    border: solid rgb(167, 211, 226);
+    border: solid rgb(255, 122, 14);
     border-radius: 150px;
     margin-left: 5px;
 }
