--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -21,7 +21,7 @@ h2 {
     display: flex;
     align-items: stretch;
     border-radius: 10px;
-    border: solid rgb(255, 122, 14);
+    border: calc(var(--spacing)/6) solid rgb(255, 122, 14);
     padding-left: 5px;
     transition: all 0.5s ease;
     font-family: "Righteous", cursive;
