Flex organized contact container

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,18 +1,19 @@
-#contact{
+#paralax5 .sections-container{
     padding:0;
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction: column-reverse;
 }
 
-.contact-form{
+#contact .contact-form{
     background-color:var(--dark);
     padding: var(--spacing-medium);
-}
-form {
-    margin: 0 auto;
-    width: 80%;
+    width:100%;
 }
 
-h2 {
-    font-family: var(--secondary-font);
+#contact form{
+    width:80%;
+    margin: 0 auto;
 }
 
 .formulary {
@@ -41,26 +42,26 @@ h2 {
 }
 
 .placeholder:focus {
-    color: white;
+    color: var(--light);
 }
 
 .formulary:focus {
-    background-color: rgb(255, 122, 14);
-    color: white;
+    background-color:var(--secondary-color);
+    color: var(--light);
 }
 
 textarea:focus{
-    background-color: rgb(255, 122, 14);
-    color: white;
+    background-color:var(--secondary-color);
+    color: var(--light);
 }
 
 textarea {
     width: 100%;
-    margin-bottom: 5px;
+    margin-bottom: var(--spacing);
     font-family: "Righteous", cursive;
     border-radius: 10px;
-    border: solid rgb(255, 122, 14);
-    padding-left: 5px;
+    border: solid var(--secondar-color) calc(var(--spacing)/6);
+    padding-left: var(--spacing);
     transition: all 0.5s ease;
 }
 
@@ -102,23 +103,7 @@ hr{
 }
 
 @media screen and (min-width: 769px){
-    #contact {
-        display: flex;
-        justify-content : center;
-        align-items: stretch;
-        min-height: fit-content;
-    }
-    .contact-form{
-        width:50%;
-    } 
-    .quote-card{
-        display:flex;
-        justify-content:space-around;
-    }
-    .references h3, .references p{
-        font-family: var(--main-font);
-        text-align: left;
-    }
+    
 }
 
 
