--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -35,12 +35,12 @@ h2 {
     text-align: left;
 }
 
-.placeholder {
-    color: lightgray;
+#name::placeholder {
+    color: gray;
     transition: 0.5s;
 }
 
-.placeholder:focus {
+#name::placeholder:focus {
     color: white;
 }
 
@@ -65,6 +65,12 @@ textarea {
 }
 
 button {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    top: 0;
+    left: 0;
     font-family: "Righteous", cursive;
     cursor: pointer;
     background-color: rgb(255, 122, 14);
@@ -72,6 +78,23 @@ button {
     border: solid rgb(255, 122, 14);
     border-radius: 150px;
     margin-left: 5px;
+
+}
+
+.button-container {
+    position: relative;
+    height: 40px;
+    width: 140px;
+    margin: 0 auto;
+}
+
+#button-contact {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    top: 0;
+    left: 0;
 }
 
 
