--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -26,7 +26,9 @@
 
 
 #faq{
-    background-color:var(--main-color);
+    background-color:var(--light-transparent);
+    padding: var(--spacing-large);
+    margin-top: var(--spacing-medium);
 }
 
 
@@ -83,6 +85,7 @@
     font-family: var(--main-font);
     padding-bottom: 32px;
     margin-top: 0px;
+    color: var(--dark);
 }
 
 .atom {
@@ -101,3 +104,18 @@
     width: 65px;
 }
 
+.faqWrapper {
+    background-image: url("../Assets/dolodesert.jpg");
+    background-repeat: no-repeat ;
+    background-size: cover;
+    position: absolute;
+    width: 100%;
+}
+
+@media screen and (min-width: 769px){
+    #faq {
+        background-color:var(--light-transparent);
+        padding: var(--spacing-large);
+        margin-top: var(--spacing-large);        
+    }
+}
