--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -64,7 +64,7 @@ textarea {
     transition: all 0.5s ease;
 }
 
-.button-container button {
+.button-container > button {
     position: absolute;
     width: 100%;
     height: 100%;
