--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,5 +1,5 @@
 header{
-    padding: var(--spacing-medium) var(--spacing-medium) 0;
+    padding: var(--spacing) var(--spacing-medium);
     display:flex;
     justify-content:space-between;
     align-items: start;
@@ -17,9 +17,9 @@ header h1{
     font-family:var(--h1);
     margin: 0;
     font-weight:100;
-    font-size:1.5em;
     color:var(--light);
     width:auto;
+    font-size:1.2em;
 }
 header p{
     font-family:var(--main-font);
@@ -39,17 +39,21 @@ header li{
     list-style-type: none;
     font-family:var(--secondary-font);
     text-align: right;
+    font-size:.8em;
 }
 header a{
     font-family:var(--h1);
     text-decoration: none;
-    padding:var(--spacing);
+    padding:var(--spacing) 0;
     color:var(--light);
     transition: .1s ease-in-out;
 }
 header a:hover{
     color:var(--main-color);
     transition: .1s ease-in-out;
+}
+header .title{
+    padding: var(--spacing) 0;
 }
 header h1 a{
     padding:0;
@@ -58,7 +62,7 @@ header h1 a{
     display:flex;
     flex-direction:column;
     position:absolute;
-    bottom:var(--spacing-medium);
+    bottom: var(--spacing);
 }
 .infos-container p{
     font-size:.7em;
@@ -85,6 +89,8 @@ header h1 a{
     display:flex;
     flex-direction:column;
     align-items:flex-end;
+    height:100%;
+    justify-content:space-between;
 }
 #menu-mobile{
     width:max-content;
@@ -101,10 +107,7 @@ header h1 a{
     background-color:var(--light);
     transition: .2s ease-in;
 }
-.hidden-desktop{
-    display: flex;
-    flex-direction: column;
-}
+
 .header-opacity{
     opacity:.9;
 }
@@ -136,7 +139,11 @@ header h1 a{
 
 @media screen and (min-width:426px){
     header h1{
-        font-size:2em;
+        font-size:1.5em;
+        width:max-content;
+    }
+    header li{
+        font-size:1em;
     }
 }
 
@@ -147,10 +154,24 @@ header h1 a{
     #menu-desktop{
         display:block;
         width:auto;
+        padding-top:var(--spacing-medium);
     }
     #menu-desktop ul{
         display:flex;
         justify-content: space-between;
+        width:max-content;
+    }
+    
+    header .title{
+        padding:0;
+    }
+    header h1{
+        margin-bottom:var(--spacing-large);
+    }
+    header .title p{
+        position:absolute;
+        bottom:0;
+        font-size:1.3em;
     }
     header li{
         display:inline;
@@ -158,6 +179,9 @@ header h1 a{
     }
     .hidden-mobile{
         display:block;
+    }
+    .hidden-mobile a{
+        padding : var(--spacing);
     }
     .hidden-desktop{
         display:none;
