Finished fixing anchor callings

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -110,6 +110,13 @@ ul{
     background-image:url('../Assets/dolodesert.jpg');
 }
 
+#profile:target, #experience:target, #competences:target, #education:target, #contacts:target{
+    padding-top:94px;
+    margin-top:-94px;
+}
+#faq:target{
+    padding-top:94px;
+}
 @media screen and (min-width: 769px){
     section{
         padding-bottom:0;
