--- a/CSS/main.css
+++ b/CSS/main.css
@@ -117,7 +117,9 @@ ul{
 #faq:target{
     padding-top:94px;
 }
-
+button:focus{
+    outline: none;
+}
 @media screen and (min-width: 769px){
     section{
         padding-bottom:0;
